tests/fixtures/invalid/constraint_choice.etcm
spec Runtime:
  device: str = Field(choices=["cpu", "cuda"])

impl default:
  device: "tpu"
